k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supermanus
  labels:
    name: supermanus
    app: supermanus
    version: "1.0.0"
